--- a/app/assets/stylesheets/briarcliff/_context.scss
+++ b/app/assets/stylesheets/briarcliff/_context.scss
@@ -9,9 +9,6 @@
 
 .context--horizontal {
   position: relative;
-  @include bp-medium {
-    display: none;
-  }
 }
 
 .context--horizontal-button {
@@ -22,7 +19,8 @@
   opacity: .7;
   @include transition(opacity .2s ease-in-out);
   z-index: 1;
-  @include border-radius();
+  @include border-radius(999px);
+  @include box-shadow();
 
   span {
     font-size: 1.3em;
@@ -30,6 +28,12 @@
 
   &:hover {
     opacity: 1;
+  }
+
+  @include bp-large {
+    opacity: 1;
+    top: 2.1em;
+    font-size: .8em;
   }
 }
 
@@ -40,8 +44,16 @@
 .context--next {
   left: 100%;
   margin-left: 1em;
+
+  @include bp-large {
+    margin-left: -1.5em;
+  }
 }
 .context--previous {
   right: 100%;
   margin-right: 1em;
+
+  @include bp-large {
+    margin-right: -1.5em;
+  }
 }
